--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,13 @@
 		"classmap": [
 			"app/commands",
 			"app/controllers",
-			"app/models",
 			"app/database/migrations",
 			"app/database/seeds",
 			"app/tests/TestCase.php"
-		]
+		],
+		"psr-0": {
+			"booking": "app/"
+		}
 	},
 	 "require-dev": {
        "way/laravel-test-helpers": "dev-master",
